COmpare functie toegevoegd

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,17 @@ dist.dir=dist
 dist.jar=${dist.dir}/LDGraph.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcommon-1.0.21.jar=D:\\Dingen\\NetBeansProjects\\Verzorgersplugin\\jfreechart-1.0.17\\lib\\jcommon-1.0.21.jar
+file.reference.jfreechart-1.0.17-swt.jar=D:\\Dingen\\NetBeansProjects\\Verzorgersplugin\\jfreechart-1.0.17\\lib\\jfreechart-1.0.17-swt.jar
+file.reference.mysql-connector-java-5.1.30-bin.jar=D:\\Dingen\\NetBeansProjects\\Verzorgersplugin\\mysql-connector-java-5.1.30\\mysql-connector-java-5.1.30-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.jfreechart.classpath}:\
-    ${libs.jcommon.classpath}
+    ${file.reference.jcommon-1.0.21.jar}:\
+    ${file.reference.jfreechart-1.0.17-swt.jar}:\
+    ${file.reference.mysql-connector-java-5.1.30-bin.jar}:\
+    ${libs.jcommon.classpath}:\
+    ${libs.jfreechart.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
