--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/jelle/.netbeans/8.0/build.properties
+user.properties.file=C:\\Users\\Riekelt\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
